started adding appearance

--- a/Lab5HtmlCSS/styles.css
+++ b/Lab5HtmlCSS/styles.css
@@ -1,6 +1,17 @@
-article {
+	article {
         display: none;
       }
       article:target {
         display: block;
       }
+
+header{
+	background-color:#3161F0;
+	color:white;
+	  
+}
+
+footer{
+	background: linear-gradient(#FDFAFB, #BFD6FF);
+	  
+}
