--- a/Lab5HtmlCSS/styles.css
+++ b/Lab5HtmlCSS/styles.css
@@ -1,11 +1,21 @@
-	article {
-        display: none;
-      }
-      article:target {
-        display: block;
-      }
+body{
+	display:flex;
+	flex-wrap:wrap;
+}
+
+article {
+    display: none;
+}
+
+article:target {
+	padding:20px;
+	flex: 80%;
+       display: block;
+}
+
 
 header{
+	flex: 100%;
 	background-color:#3161F0;
 	color:white;
 	font-family: "Verdana";
@@ -14,9 +24,27 @@ header{
 	  
 }
 
+nav{
+	flex:15%;
+	background-color:#3161F0;
+	color:white;
+	padding:5px;
+	
+}
+
+.menu{
+	color:white;
+}
+
+
+
 footer{
+	flex:100%;
 	background: linear-gradient(#FDFAFB, #BFD6FF);
-	padding:15px;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	
 	  
 }
 
@@ -41,8 +69,12 @@ tr {
    align-items: center;
 }
 
+tr:hover {
+	background-color: #96A6FF;
+}
+
 table {
-  border-collapse: collapse;
+	border-collapse: collapse;
 }
 
 table, th, td {
@@ -53,11 +85,6 @@ th {
   height: 2em;
   background-color:#C0D0FF;
 }
-
-
-tr:hover {
-	background-color: #96A6FF;
-	}
 	
 input:invalid {
     color : red;
@@ -65,7 +92,7 @@ input:invalid {
 
 
 @media print {
-article {
+article{
         display: block;
 }
  
@@ -74,8 +101,6 @@ body{
         background-color: white;
         color: black;
 }
-
-
 
 tr:nth-child(2), tr:last-child, button, nav, footer, header,a{
         display: none;
@@ -102,9 +127,12 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 
-input
-{
-border-style: none;
+input, textarea {
+        border: 0 !important;
+        border-style: none !important;
+		-webkit-appearance: none;
+		-moz-appearance:textfield;
+
 }
 	
 	
